2024-10-08 10:20:45 /home/martin/.cache/thumbnails/fail/gnome-thumbnail-factory/2ec10074571720dfdfc4ba4cddc63ad0.png
2024-10-08 10:20:45 /home/martin/.cache/thumbnails/fail/gnome-thumbnail-factory/d219b6fc48d95bd3bf583d939e6ddb01.png
2024-10-08 10:20:45 /home/martin/.cache/thumbnails/fail/gnome-thumbnail-factory/601e54d04c859976739dcaccce6e2cd6.png
2024-10-08 10:20:45 /home/martin/.cache/thumbnails/fail/gnome-thumbnail-factory/d4a14158d8492643c19133eea5c3b606.png
2024-10-08 10:20:45 /home/martin/.cache/thumbnails/fail/gnome-thumbnail-factory/9c2eea91778fd04a2fd54cfea520b81a.png
2024-10-08 10:20:45 /home/martin/.cache/thumbnails/fail/gnome-thumbnail-factory/f3132858e77b162641dfb751bd18fc88.png
2024-10-08 10:20:45 /home/martin/.cache/thumbnails/fail/gnome-thumbnail-factory/8a06186c1f714025512cadb6d2ef5c89.png
2024-10-08 10:20:45 /home/martin/.cache/thumbnails/fail/gnome-thumbnail-factory/6c87a036884df8f35e10dd1c420ae48c.png
2024-10-08 10:20:45 /home/martin/.cache/thumbnails/fail/gnome-thumbnail-factory/2a771524b808add827582c1e2595d091.png
2024-10-08 10:20:45 /home/martin/.cache/thumbnails/fail/gnome-thumbnail-factory/39a031d4e8276743c20992307a973942.png
2024-10-08 10:20:45 /home/martin/.cache/thumbnails/fail/gnome-thumbnail-factory/ffd7fae3101624432f0819fd14ea1988.png
2024-10-08 10:20:45 /home/martin/.cache/mesa_shader_cache/index
2024-10-08 10:20:45 /home/martin/.cache/mesa_shader_cache/6b/1cd37cb4caf05608ac6142df90125853ecffc7
2024-10-08 10:20:45 /home/martin/.cache/mesa_shader_cache/60/c7da98912c58b40597eafafb9794f602403ca1
2024-10-08 10:26:44 /home/martin/.local/share/gnome-shell/application_state
2024-10-08 11:14:55 /home/martin/.local/share/tracker/data/tracker-store.journal
2024-10-08 11:14:55 /home/martin/.cache/tracker/meta.db
2024-10-08 11:14:55 /home/martin/.cache/tracker/meta.db-wal
2024-10-08 11:14:55 /home/martin/.cache/tracker/meta.db-shm
2024-10-08 14:00:08 /home/martin/test2/hello2
2024-10-08 14:29:23 /home/martin/test2/hello3