@@ -1,6 +1,15 @@
-2024-10-09 09:46:35,251 - WARNING - host_ips: ['192.168.204.5']
-2024-10-09 09:46:35,251 - WARNING - 0 iteration 192.168.204.5
-2024-10-09 09:46:35,251 - WARNING - Manifest location: [['/home/martin']]
-2024-10-09 09:46:36,138 - WARNING - LAST 10 OF MANIFEST (without hidden paths): ['2024-09-25 12:02:40 /home/martin/klimb.txt\n', '2024-09-25 12:02:40 /home/martin/test2/hello\n', '2024-10-08 14:00:08 /home/martin/test2/hello2\n', '2024-10-08 14:29:23 /home/martin/test2/hello3\n']
-2024-10-09 09:46:36,138 - WARNING - Checked ports lines: ['SHOULD BE CLOSED: cupsd     444949   root    6u  IPv6 1404794      0t0  TCP [::1]:631 (LISTEN)\n', 'SHOULD BE CLOSED: cupsd     444949   root    7u  IPv4 1404795      0t0  TCP 127.0.0.1:631 (LISTEN)\n', 'SHOULD BE LISTENING: 80\n', 'SHOULD BE LISTENING: 443\n']
-2024-10-09 09:46:36,138 - WARNING - checked_ports_lines: ['SHOULD BE CLOSED: cupsd     444949   root    6u  IPv6 1404794      0t0  TCP [::1]:631 (LISTEN)', 'SHOULD BE CLOSED: cupsd     444949   root    7u  IPv4 1404795      0t0  TCP 127.0.0.1:631 (LISTEN)', 'SHOULD BE LISTENING: 80', 'SHOULD BE LISTENING: 443']
+2024-10-16 10:57:41,327 - WARNING - host_ips: ['192.168.204.3']
+2024-10-16 10:57:41,327 - WARNING - 0 iteration 192.168.204.3
+2024-10-16 10:57:41,328 - WARNING - Sent location: [['/home/martin/test4']]
+2024-10-16 10:57:41,328 - WARNING - Received manifest: (['/home/martin/test4'],)
+2024-10-16 10:57:41,328 - WARNING - Sent command: ./modules/hasher/hasher.sh martin 192.168.204.3 22 /home/martin/test4
+2024-10-16 10:59:01,067 - WARNING - Received manifest: ('',)
+2024-10-16 10:59:01,067 - WARNING - Sent command: ./modules/audit/retrieve.sh martin 192.168.204.5 22 
+2024-10-16 10:59:01,361 - WARNING - host_ips: ['192.168.204.5']
+2024-10-16 10:59:01,361 - WARNING - 0 iteration 192.168.204.5
+2024-10-16 10:59:01,362 - WARNING - Sent location: [['/home/martin']]
+2024-10-16 10:59:01,362 - WARNING - Received manifest: (['/home/martin'],)
+2024-10-16 10:59:01,362 - WARNING - Sent command: ./modules/hasher/hasher.sh martin 192.168.204.5 22 /home/martin
+2024-10-16 10:59:02,847 - WARNING - LAST 10 OF MANIFEST (without hidden paths): ['2024-09-25 12:02:40 /home/martin/klimb.txt\n', '2024-09-25 12:02:40 /home/martin/test2/hello\n', '2024-10-08 14:00:08 /home/martin/test2/hello2\n', '2024-10-08 14:29:23 /home/martin/test2/hello3\n', '2024-10-16 10:59:02 /home/martin/test/smakfmak\n', '2024-10-16 10:59:02 /home/martin/test2/hello3\n', '2024-10-16 10:59:02 /home/martin/test2/hello2\n']
+2024-10-16 10:59:02,848 - WARNING - Checked ports lines: ['SHOULD BE CLOSED: cupsd     453678   root    6u  IPv6 1591589      0t0  TCP [::1]:631 (LISTEN)\n', 'SHOULD BE CLOSED: cupsd     453678   root    7u  IPv4 1591590      0t0  TCP 127.0.0.1:631 (LISTEN)\n', 'SHOULD BE LISTENING: 80\n', 'SHOULD BE LISTENING: 443\n']
+2024-10-16 10:59:02,848 - WARNING - checked_ports_lines: ['SHOULD BE CLOSED: cupsd     453678   root    6u  IPv6 1591589      0t0  TCP [::1]:631 (LISTEN)', 'SHOULD BE CLOSED: cupsd     453678   root    7u  IPv4 1591590      0t0  TCP 127.0.0.1:631 (LISTEN)', 'SHOULD BE LISTENING: 80', 'SHOULD BE LISTENING: 443']
