@@ -63,3 +63,12 @@
 2024-10-08 11:14:55 /home/martin/.cache/tracker/meta.db-shm
 2024-10-08 14:00:08 /home/martin/test2/hello2
 2024-10-08 14:29:23 /home/martin/test2/hello3
+2024-10-16 10:59:02 /home/martin/.config/dconf/user
+2024-10-16 10:59:02 /home/martin/.local/share/gnome-shell/notifications
+2024-10-16 10:59:02 /home/martin/.local/share/tracker/data/tracker-store.journal
+2024-10-16 10:59:02 /home/martin/.cache/tracker/meta.db
+2024-10-16 10:59:02 /home/martin/.cache/tracker/meta.db-wal
+2024-10-16 10:59:02 /home/martin/.cache/tracker/meta.db-shm
+2024-10-16 10:59:02 /home/martin/test/smakfmak
+2024-10-16 10:59:02 /home/martin/test2/hello3
+2024-10-16 10:59:02 /home/martin/test2/hello2
